compiler-cli/src/new/snapshots/rakun__new__tests__new_with_default_template@.gitignore.snap
---
source: compiler-cli/src/new/tests.rs
assertion_line: 56
expression: "crate::fs::read(Utf8PathBuf::from_path_buf(file_path.to_path_buf()).expect(\"Non Utf8 Path\"),).unwrap()"
---
*.beam
*.ez
/build
erl_crash.dump
